# safire

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/cli/: add.rs  command.rs  command_handler.rs  copy.rs  delete.rs  edit.rs  find.rs  generate.rs  grep.rs  init.rs  insert.rs  mod.rs  remove.rs  subcommand.rs
src/commands/: command_handler.rs  copy.rs  edit.rs  find.rs  generate.rs  insert.rs  mod.rs
src/data/: store.rs
src/entities/: store.rs
src/utils/: constants.rs  directories.rs  find.rs  gpg.rs  mod.rs  paths.rs
