[package]
name = "safire"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
rand = "0.8"
dirs = "3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
edit = "0.1.4"
termion = "1.5"
rpassword = "4.0"
clipboard = "0.5.0"
ring = "0.17.5"
base64 = "0.21.5"
